--- a/jspbasics/src/main/webapp/student-form.html
+++ b/jspbasics/src/main/webapp/student-form.html
@@ -16,12 +16,12 @@
 		<option>Singapore</option>
 		<option>Japan</option>
 		</select> <br>
-	<input type="submit" value="submit"> <br>
+	
 	State:
-	<input type="checkbox" name="state" value="Trichy">Tamilnadu</input>
-	<input type="checkbox" name="state" value="">Karnataka</input>
-	<input type="checkbox" name="state" value="Trichy">Kerala</input>
-	<input type="checkbox" name="state" value="Trichy">Delhi</input> <br>
+	<input type="checkbox" name="state" value="tn" >Tamilnadu</input>
+	<input type="checkbox" name="state" value="ka" >Karnataka</input>
+	<input type="checkbox" name="state" value="kr" ">Kerala</input>
+	<input type="checkbox" name="state" value="dh">Delhi</input> <br>
 	<input type="submit" value="submit">
 	</form>
 
